# HashTable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  genFileWithRandWords.py  hash_table  run.sh  test.txt  tests.txt
books/: allShakespearePlays.txt  fellowshipOfTheRing.txt  harryPotter5.txt  returnOfTheKing.txt  twoTowers.txt
include/: hash_function.h  hash_string.h  hash_table.h  hash_tests_logic.h  list.h  messages.h  my_memcmp.h  text_processing.h
py_sources/: hash_make_plots.py  text_generate_random.py  text_preprocessing.py
results/: hash_string_crc32.txt  hash_string_djb2.txt  hash_string_fnv-1a.txt  hash_string_length.txt  hash_string_polynomial.txt  hash_string_sdbm.txt  hash_string_sum.txt
source/: hash_function.s  hash_table.cpp  hash_tests.cpp  hash_tests_logic.cpp  list.cpp  main.cpp  my_memcmp.s  my_memcpy.s  text_processing.cpp
